# Speech-Emotion-Recognition

./: pyproject.toml  train.py
models/dnn/: cnn.py  dnn.py
