[project]
name = "speech-emotion-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "joblib>=1.4.2",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
]
